<resources>
    <string name="app_name">COMP2000_Geocache</string>
    <string name="geocaching">GeoCaching</string>
    <string name="geocache_example">GeoCache Example</string>
    <string name="home_slogan">Find Treasure while exploring nature</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_title">Sign Up to use GeoCaching</string>
    <string name="create_account">Create Account</string>
    <string name="email_placeholder">Email Address</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="log_in_title">Log in with your account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="map">Map</string>
    <string name="manage_cache">Manage Caches</string>
    <string name="create_cache">Create Cache</string>
    <string name="player_statistics_title">Player Statistics</string>
    <string name="admin_statistics">Admin Statistics</string>
    <string name="default_statistics">0</string>
    <string name="caches_found">Caches Found</string>
    <string name="hints_viewed">Hints Viewed</string>
    <string name="show_hint">Show Hint</string>
    <string name="mark_found">Mark Found</string>
    <string name="caches_created">Caches Created</string>
    <string name="caches_maintained">Caches Maintained</string>
    <string name="view_caches">View Caches</string>
    <string name="view">View</string>
    <string name="view_item">View Item</string>
    <string name="default_cache">[Cache Name]</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="set_hint">Set Hint</string>
    <string name="default_username">Username</string>
    <string name="navigate">Navigate To</string>
    <string name="last_found">Last Found:</string>
    <string name="date">DD/MM/YY</string>
    <string name="cache1">Cache 1</string>
    <string name="cache2">Cache 2</string>
    <string name="cache3">Cache 3</string>
    <string name="cache4">Cache 4</string>
    <string name="in_play">In Play</string>
    <string name="times_found">Times Found</string>
    <string name="finds_until_maintenance">Finds until maintenance</string>
    <string name="maintenance">Maintenance Required</string>
    <string name="damaged">Damaged</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="placeholder_paragraph">This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    This is a placeholder description
    </string>
    <string name="_15">15</string>
    <string name="_5">5</string>
    <string name="date_found">Date Found</string>
    <string name="viewed_hint">Viewed Hint</string>
    <string name="caches_that_you_ve_found">Caches That You\'ve Found</string>
</resources>