<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

  <Button
      android:id="@+id/createAccountButton"
      android:layout_width="350dp"
      android:layout_height="65dp"
      android:layout_marginBottom="36dp"
      android:backgroundTint="@color/green"
      android:text="@string/create_account"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/signUpTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:text="@string/sign_up_title"
      android:textColor="#000000"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <EditText
      android:id="@+id/emailEditText"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="28dp"
      android:hint="@string/email_placeholder"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <EditText
      android:id="@+id/usernameEditText"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="28dp"
      android:hint="@string/username_placeholder"
      android:inputType="text"
      android:minHeight="48dp"
      app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"/>

  <EditText
      android:id="@+id/passwordEditText"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="340dp"
      android:hint="@string/password_placeholder"
      android:inputType="textPassword"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>